syntax = "proto3";

service LeaseService {
  rpc RequestLease(LeaseRequest) returns (LeaseResponse);
}

message LeaseRequest { 
  repeated string value = 1;

}

message LeaseResponse {
  bool ack = 1;
}